--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -40,24 +40,24 @@
   </script>
 
   <script id="tplHeaderOld" type="text/x-template">
-<a href="/ov.html#calendar" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#calendar" style="left: 10px;"><img src="/image/bhv1.gif" height="30px" /></a>
 <div class="nav l1" data-dir="{{dir-12}}">&lt;&lt;</div>
 <div class="nav l2" data-dir="{{dir-1}}">&lt;</div>
 <div class="title">{{month}} {{year}}</div>
 <div class="nav r2" data-dir="{{dir+1}}">&gt;</div>
 <div class="nav r1" data-dir="{{dir+12}}">&gt;&gt;</div>
-<a href="/ov.html#calendar" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#calendar" style="right: 10px;"><img src="/image/bhv1.gif" height="30px" /></a>
   </script>
   <script id="tplHeader" type="text/x-template">
 <div class="left">
-<a href="/ov.html#calendar"><img src="/image/logo.png"/></a>
+<a href="/ov.html#calendar"><img src="/image/bhv1.gif"/></a>
 <div class="nav l1" data-dir="{{dir-12}}">&lt;&lt;</div>
 <div class="nav l2" data-dir="{{dir-1}}">&lt;</div>
 <div>{{month}} {{year}}</div>
 </div><div class="right">
 <div class="nav r2" data-dir="{{dir+1}}">&gt;</div>
 <div class="nav r1" data-dir="{{dir+12}}">&gt;&gt;</div>
-<a href="/ov.html#calendar"><img src="/image/logo.png"/></a>
+<a href="/ov.html#calendar"><img src="/image/bhv1.gif"/></a>
 </div>
   </script>
   <script id="tplFooter" type="text/x-template">
