--- a/imageview.html
+++ b/imageview.html
@@ -12,7 +12,7 @@ div#img {
   top: 11em;
   right: 1em;
   bottom: 4.8em;
-  background-image: url("image/logo.png");
+  background-image: url("image/bhv2.gif");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
@@ -78,10 +78,10 @@ function setImage() {
 </head>
 <body onload="setImage();">
   <div id="header"><div class="left">
-<a href="/ov.html"><img src="/image/logo.png"/></a>
+<a href="/ov.html"><img src="/image/bhv1.gif"/></a>
 <div>&nbsp;</div>
 </div><div class="right">
-<a href="/ov.html"><img src="/image/logo.png"/></a>
+<a href="/ov.html"><img src="/image/bhv1.gif"/></a>
 </div>
 </div>
   <div id="img">&nbsp;</div>
