--- a/info/gesucht.html
+++ b/info/gesucht.html
@@ -17,10 +17,10 @@ div#content_container {
 <body>
   <div id="header">
     <div class="left">
-    <a href="/ov.html#gesucht"><img src="/image/logo.png"/></a>
+    <a href="/ov.html#gesucht"><img src="/image/bhv1.gif"/></a>
     <div>Gesucht!</div>
     </div><div class="right">
-    <a href="/ov.html#gesucht"><img src="/image/logo.png"/></a>
+    <a href="/ov.html#gesucht"><img src="/image/bhv1.gif"/></a>
     </div>
   </div>
   <div id="content_container">&nbsp;</div>
