--- a/info/info19.html
+++ b/info/info19.html
@@ -41,10 +41,10 @@ img.bullet {
 <body>
 <div id="header">
   <div class="left">
-  <a href="/ov.html#divinfo19"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#divinfo19"><img src="/image/bhv1.gif"/></a>
   <div>Allgemeines</div>
   </div><div class="right">
-  <a href="/ov.html#divinfo19"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#divinfo19"><img src="/image/bhv1.gif"/></a>
   </div>
 </div>
 <div id="content_container">
