--- a/info/wunschzettel.html
+++ b/info/wunschzettel.html
@@ -32,10 +32,10 @@ h1 {
 <body>
 <div id="header">
   <div class="left">
-  <a href="/ov.html#wunsch"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#wunsch"><img src="/image/bhv1.gif"/></a>
   <div>Ein Wunschzettel</div>
   </div><div class="right">
-  <a href="/ov.html#wunsch"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#wunsch"><img src="/image/bhv1.gif"/></a>
   </div>
 </div>
 <div id="content_container">
