--- a/standings.html
+++ b/standings.html
@@ -74,10 +74,10 @@ function setBack(region) {
  <body onload="setBack('standings'); getStandings();">
   <div id="header">
     <div class="left">
-    <a href="/ov.html"><img src="/image/logo.png"/></a>
+    <a href="/ov.html"><img src="/image/bhv1.gif"/></a>
     <div>Tabelle</div>
     </div><div class="right">
-    <a href="/ov.html"><img src="/image/logo.png"/></a>
+    <a href="/ov.html"><img src="/image/bhv1.gif"/></a>
     </div>
   </div>
   <div id="content_container"><pre id="content">Loading...</pre></div>
