--- a/statistics/19/u17.html
+++ b/statistics/19/u17.html
@@ -185,10 +185,10 @@ function init() {
 <body onload="init();">
 <div id="header">
   <div class="left">
-  <a href="/ov.html#statistics_u17_19"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#statistics_u17_19"><img src="/image/bhv1.gif"/></a>
   <div>Statistik</div>
   </div><div class="right">
-  <a href="/ov.html#statistics_u17_19"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#statistics_u17_19"><img src="/image/bhv1.gif"/></a>
   </div>
 </div>
 </div>
