--- a/uld/grundlagen/index.html
+++ b/uld/grundlagen/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div id="header"><div class="left">
-<a href="/ov.html#grundlagen_br4"><img src="/image/logo.png"/></a>
+<a href="/ov.html#grundlagen_br4"><img src="/image/bhv1.gif"/></a>
 <div>Grundlagen</div>
 </div><div class="right">
-<a href="/ov.html#grundlagen_br4"><img src="/image/logo.png"/></a>
+<a href="/ov.html#grundlagen_br4"><img src="/image/bhv1.gif"/></a>
 </div>
 </div>
   <div id="content_container"><h1 class="tactics">Grundlagen</h1>
