--- a/uld/grundlagen3/aufspiel/index.html
+++ b/uld/grundlagen3/aufspiel/index.html
@@ -171,9 +171,9 @@ text.subtitle {
 <body>
 
   <div id="header">
-  <a href="/uld/grundlagen3/#aufspiel" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/uld/grundlagen3/#aufspiel" style="left: 10px;"><img src="/image/bhv1.gif" height="30px" /></a>
   <div class="title">Die Codes</div>
-  <a href="/uld/grundlagen3/#aufspiel" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/uld/grundlagen3/#aufspiel" style="right: 10px;"><img src="/image/bhv1.gif" height="30px" /></a>
   </div>
 
   <div id="svgcontainer">
