--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@ a {
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/image/logo.png");
+  background-image: url("/image/bhv2.gif");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
