--- a/info/u20.html
+++ b/info/u20.html
@@ -30,10 +30,10 @@ img.bullet {
 <body>
 <div id="header">
   <div class="left">
-  <a href="/ov.html#info20"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#info20"><img src="/image/bhv1.gif"/></a>
   <div>U20 - Juniorinnen</div>
   </div><div class="right">
-  <a href="/ov.html#info20"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#info20"><img src="/image/bhv1.gif"/></a>
   </div>
 </div>
 <div id="content_container">
