--- a/results.html
+++ b/results.html
@@ -45,10 +45,10 @@ function setBack(region) {
  <body onload="setBack('results'); getResults();">
   <div id="header">
     <div class="left">
-    <a href="/ov.html"><img src="/image/logo.png"/></a>
+    <a href="/ov.html"><img src="/image/bhv1.gif"/></a>
     <div>Ergebnisse</div>
     </div><div class="right">
-    <a href="/ov.html"><img src="/image/logo.png"/></a>
+    <a href="/ov.html"><img src="/image/bhv1.gif"/></a>
     </div>
   </div>
   <div id="content_container"><pre id="content">Loading...</pre></div>
