--- a/u11/3x_spielen_x.html
+++ b/u11/3x_spielen_x.html
@@ -214,10 +214,10 @@ function menuHandler(fullkey, state) {
 <body onload="init();">
 <div class="container">
 <div id="header"><div class="left">
-<a href="/u11/#3x_spielen_x"><img src="/image/logo.png"/></a>
+<a href="/u11/#3x_spielen_x"><img src="/image/bhv1.gif"/></a>
 <div>{{title}}</div>
 </div><div class="right">
-<a href="/u11/#3x_spielen_x"><img src="/image/logo.png"/></a>
+<a href="/u11/#3x_spielen_x"><img src="/image/bhv1.gif"/></a>
 </div>
 </div>
 <div id="svgcanvas"><div class="animation_cmds">
