--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Brückl hotvolleys Info-Seiten.">
   <title>Brückl hotvolleys</title>
-
+  
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
@@ -32,6 +34,8 @@ a {
   </style>
 </head>
 <body>
-  <a href="/index2.html">&nbsp;</a>
+  <main>
+    <a href="/index2.html" aria-label="Goto overview.">&nbsp;</a>
+  </main>
 </body>
 </html>
