--- a/_work/favicons/index.html
+++ b/_work/favicons/index.html
@@ -1,4 +1,4 @@
-<html>  <head>
+<html><head>
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
@@ -8,4 +8,6 @@
 <meta name="msapplication-TileColor" content="#b91d47">
 <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
 <meta name="msapplication-config" content="/favicons/browserconfig.xml">
-<meta name="theme-color" content="#ffffff"></head>  <body>  </body></html>
+<meta name="theme-color" content="#ffffff"></head>
+  <body>
+</body></html>
