--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Brückl hotvolleys Info-Seiten.">
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <style>
@@ -21,6 +23,8 @@ a {
   <link rel="shortcut icon" href="/favicons/favicon.ico">
 </head>
 <body>
-  <a href="/ov.html">&nbsp;</a>
+  <main role="main">
+    <a href="/ov.html" aria-label="Goto overview.">&nbsp;</a>
+  </main>
 </body>
 </html>
