--- a/ov.html
+++ b/ov.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Brückl hotvolleys Info-Seiten.">
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="/elements/expander/styles.css">
@@ -88,7 +90,8 @@ function init() {
   </script>
 </head>
 <body onload="init();">
-
+  <nav role="navigation">
+    
   <h1 id="nw" class="expandable" style=""><br>Nachwuchs<br>&nbsp;</h1>
   <div id="nw_2" class="expanded_container">
 
@@ -381,5 +384,6 @@ function init() {
     <a id="divinfo19" href="info/info19.html"><h3>Allgemeine Infos (Vorsaison)</h3></a>
   </div>
 
+  </nav>
 </body>
 </html>
