--- a/results.html
+++ b/results.html
@@ -23,6 +23,7 @@
   }
   </style>
   <script src="/script/polyfills.js"></script>
+  <script src="/script/pako_inflate.min.js"></script>
   <script src="/script/db.js"></script>
   <script src="/script/request.js"></script>
   <script src="/script/results.js"></script>
