--- a/standings.html
+++ b/standings.html
@@ -53,6 +53,7 @@
   </style>
   <script src="/script/polyfills.js"></script>
   <script src="/script/db.js"></script>
+  <script src="/script/pako_inflate.min.js"></script>
   <script src="/script/request.js"></script>
   <script src="/script/standings.js"></script>
   <script type="text/javascript">
