linting (pwa, comments, line endings)

--- a/ov.html
+++ b/ov.html
@@ -13,6 +13,7 @@ body {
 }
   </style>
   <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <script src="/script/polyfills.js"></script>
   <script src="/elements/expander/script.js"></script>
   <script>
 function init() {
@@ -91,7 +92,7 @@ function init() {
 </head>
 <body onload="init();">
   <nav role="navigation">
-    
+
   <h1 id="nw" class="expandable" style=""><br>Nachwuchs<br>&nbsp;</h1>
   <div id="nw_2" class="expanded_container">
 
