--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
   <title>Brückl hotvolleys</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
   <link rel="manifest" href="/manifest.webmanifest">
@@ -23,6 +22,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="BHV Info App">
   <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
 
   <link rel="stylesheet" href="/styles.css">
   <style>
@@ -55,7 +55,7 @@ if ('serviceWorker' in navigator) {
 <body>
   <noscript>This is the warning.</noscript>
   <main role="main">
-    <a href="/index2.html" aria-label="Goto overview.">&nbsp;</a>
+    <a href="/ov.html" aria-label="Goto overview.">&nbsp;</a>    
   </main>
 </body>
 </html>
