--- a/ov.html
+++ b/ov.html
@@ -280,9 +280,9 @@ function init() {
 
   <h1 id="training" class="expandable"><br>Training<br>&nbsp;</h1>
   <div id="training_2" class="expanded_container">
-    <a id="training_b1" href="training/b1.html"><h3>Anwesenheit B1</h3></a>
-    <a id="training_b2" href="training/b2.html"><h3>Anwesenheit B2</h3></a>
-    <a id="training_jungs" href="training/jungs.html"><h3>Anwesenheit Jungs</h3></a>
+    <a id="training_b1" href="presence.html?key=b1"><h3>Anwesenheit B1</h3></a>
+    <a id="training_b2" href="presence.html?key=b2"><h3>Anwesenheit B2</h3></a>
+    <a id="training_jungs" href="presence.html?key=jungs"><h3>Anwesenheit Jungs</h3></a>
   </div>
 
   <h1 id="archive" class="expandable"><br>Archiv<br>&nbsp;</h1>
