--- a/ov.html
+++ b/ov.html
@@ -39,10 +39,10 @@ function init() {
     'u13_20': ['info13'],
 
     // 'ak': ...
-    'br4_20': ['schedule_br4g_20', 'results_br4g_20', 'standings_br4g_20'],
-    'br3_20': ['schedule_br3g_20', 'results_br3g_20', 'standings_br3g_20'],
-    'br2_20': ['schedule_br2g_20', 'results_br2g_20', 'standings_br2g_20'],
-    'br1_20': ['schedule_br1g_20', 'results_br1g_20', 'standings_br1g_20'],
+    'br4_20': ['schedule_br4g_20', 'results_br4g_20', 'standings_br4g_20', 'players_br4g_20'],
+    'br3_20': ['schedule_br3g_20', 'results_br3g_20', 'standings_br3g_20', 'players_br3g_20'],
+    'br2_20': ['schedule_br2g_20', 'results_br2g_20', 'standings_br2g_20', 'players_br2g_20'],
+    'br1_20': ['schedule_br1g_20', 'results_br1g_20', 'standings_br1g_20', 'players_br1g_20'],
 
     // training
     'training': ['training_b1', 'training_b2', 'training_jungs'],
@@ -210,24 +210,28 @@ function init() {
       <a id="schedule_br4g_20" href="schedule.html?key=br4g_20"><h3>Spieltermine</h3></a>
       <a id="results_br4g_20" href="results.html?key=br4g_20"><h3>Ergebnisse</h3></a>
       <a id="standings_br4g_20" href="standings.html?key=br4g_20"><h3>Tabelle</h3></a>
+      <a id="players_br4g_20" href="players.html?key=br4g_20"><h3>Spielerinnen</h3></a>
     </div>
     <h2 id="br3_20" class="expandable">Brückl 3 - Unterliga</h2>
     <div id="br3_20_2" class="expanded_container">
       <a id="schedule_br3g_20" href="schedule.html?key=br3g_20"><h3>Spieltermine</h3></a>
       <a id="results_br3g_20" href="results.html?key=br3g_20"><h3>Ergebnisse</h3></a>
       <a id="standings_br3g_20" href="standings.html?key=br3g_20"><h3>Tabelle</h3></a>
+      <a id="players_br3g_20" href="players.html?key=br3g_20"><h3>Spielerinnen</h3></a>
     </div>
     <h2 id="br2_20" class="expandable">Brückl 2 - Landesliga</h2>
     <div id="br2_20_2" class="expanded_container">
       <a id="schedule_br2g_20" href="schedule.html?key=br2g_20"><h3>Spieltermine</h3></a>
       <a id="results_br2g_20" href="results.html?key=br2g_20"><h3>Ergebnisse</h3></a>
       <a id="standings_br2g_20" href="standings.html?key=br2g_20"><h3>Tabelle</h3></a>
+      <a id="players_br2g_20" href="players.html?key=br2g_20"><h3>Spielerinnen</h3></a>
     </div>
     <h2 id="br1_20" class="expandable">Brückl 1 - Bundesliga</h2>
     <div id="br1_20_2" class="expanded_container">
       <a id="schedule_br1g_20" href="schedule.html?key=br1g_20"><h3>Spieltermine</h3></a>
       <a id="results_br1g_20" href="results.html?key=br1g_20"><h3>Ergebnisse</h3></a>
       <a id="standings_br1g_20" href="standings.html?key=br1g_20"><h3>Tabelle</h3></a>
+      <a id="players_br1g_20" href="players.html?key=br1g_20"><h3>Spielerinnen</h3></a>
     </div>
 
     <!--h2 id="br4" class="expandable">Brückl 4 - Unterliga</h2>
