--- a/presence.html
+++ b/presence.html
@@ -126,6 +126,7 @@ div.data > div > div {
   border: 0px solid dimgray;
   border-width: 0px 1px 1px 0px;
   background-color: lightgray;
+  color: #333;
   line-height: 140%;
   font-size: 0.95em;
 }
