--- a/schedule.html
+++ b/schedule.html
@@ -44,7 +44,7 @@ function setBack(region) {
 }
   </script>
  </head>
- <body onload="setBack('schedule'); getSchedules();">
+ <body onload="setBack('schedule'); bhv.schedule.getSchedules();">
   <div id="header">
     <div class="left">
     <a href="/ov.html"><img src="/image/bhv1.gif"/></a>
