--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -165,7 +165,7 @@ div#content_container {
               -0.2em  0.2em 0.2em lightgray,
               -0.2em -0.2em 0.2em lightgray;
   background-color: transparent;
-
+  text-align: right;
   font-size: 2.2em;
   pointer-events: none;
 }
