--- a/ov.html
+++ b/ov.html
@@ -33,15 +33,15 @@ function init() {
     // 'nw': ...
     'u20_20': ['info20'],
     'u18_20': ['info18'],
-    'u16_20': ['info16', 'schedule_u16_20'],
+    'u16_20': ['info16', 'schedule_u16_20', 'system6'],
     'u15_20': ['info15', 'schedule_u15_20'],
     'u14_20': ['info14', 'schedule_u14_20'],
     'u13_20': ['info13', 'schedule_u13_20'],
     'u12_20': ['info12', 'schedule_u12_20'],
 
     // 'ak': ...
-    'br4_20': ['schedule_br4g_20', 'results_br4g_20', 'standings_br4g_20', 'players_br4g_20'],
-    'br3_20': ['schedule_br3g_20', 'results_br3g_20', 'standings_br3g_20', 'players_br3g_20'],
+    'br4_20': ['schedule_br4g_20', 'results_br4g_20', 'standings_br4g_20', 'players_br4g_20', 'spielfeld6'],
+    'br3_20': ['schedule_br3g_20', 'results_br3g_20', 'standings_br3g_20', 'players_br3g_20', 'system6'],
     'br2_20': ['schedule_br2g_20', 'results_br2g_20', 'standings_br2g_20', 'players_br2g_20'],
     'br1_20': ['schedule_br1g_20', 'results_br1g_20', 'standings_br1g_20', 'players_br1g_20'],
 
@@ -124,6 +124,7 @@ function init() {
     <div id="u16_20_2" class="expanded_container">
       <a id="info16" href="/info/u16.html"><h3>Infos</h3></a>
       <a id="schedule_u16_20" href="schedule.html?key=u16_20"><h3>Turniere</h3></a>
+      <a id="system6" href="/system6"><h3>Spielsystem</h3></a>
     </div>
 
     <h2 id="u18_20" class="expandable">U18 - Jugend weiblich</h2>
@@ -222,6 +223,7 @@ function init() {
       <a id="results_br4g_20" href="results.html?key=br4g_20"><h3>Ergebnisse</h3></a>
       <a id="standings_br4g_20" href="standings.html?key=br4g_20"><h3>Tabelle</h3></a>
       <a id="players_br4g_20" href="players.html?key=br4g_20"><h3>Spielerinnen</h3></a>
+      <a id="spielfeld6" href="/system6/spielfeld"><h3>Spielsystem</h3></a>
     </div>
     <h2 id="br3_20" class="expandable">Brückl 3 - Unterliga</h2>
     <div id="br3_20_2" class="expanded_container">
@@ -229,6 +231,7 @@ function init() {
       <a id="results_br3g_20" href="results.html?key=br3g_20"><h3>Ergebnisse</h3></a>
       <a id="standings_br3g_20" href="standings.html?key=br3g_20"><h3>Tabelle</h3></a>
       <a id="players_br3g_20" href="players.html?key=br3g_20"><h3>Spielerinnen</h3></a>
+      <a id="system6" href="/system6"><h3>Spielsystem</h3></a>
     </div>
     <h2 id="br2_20" class="expandable">Brückl 2 - Landesliga</h2>
     <div id="br2_20_2" class="expanded_container">
