--- a/system6/aufspiel/index.html
+++ b/system6/aufspiel/index.html
@@ -171,9 +171,9 @@ text.subtitle {
 <body>
 
   <div id="header">
-  <a href="/uld/grundlagen3/#aufspiel" style="left: 10px;"><img src="/image/bhv1.gif" height="30px" /></a>
+  <a href="/system6/#aufspiel" style="left: 10px;"><img src="/image/bhv1.gif" height="30px" /></a>
   <div class="title">Die Codes</div>
-  <a href="/uld/grundlagen3/#aufspiel" style="right: 10px;"><img src="/image/bhv1.gif" height="30px" /></a>
+  <a href="/system6/#aufspiel" style="right: 10px;"><img src="/image/bhv1.gif" height="30px" /></a>
   </div>
 
   <div id="svgcontainer">
@@ -337,7 +337,7 @@ text.subtitle {
 </g>
 
 <!-- set 8: ball info, info text, fingers -->
-<g class="set_main" onclick="void(0)">
+<g class="set_other" onclick="void(0)">
  <path id="spiel_8" d="M650,270 c-160,-138 -285,-140 -327,-40 l0,-12 M323,230 l9,-8" />
  <rect class="info" x="290" y="310" rx="10" ry="10" width="70" height="70" />
  <text x="325" y="367">8</text>
@@ -381,7 +381,7 @@ text.subtitle {
 </g>
 
 <!-- set 3: ball info, info text, fingers -->
-<g class="set_other" onclick="void(0)">
+<g class="set_main" onclick="void(0)">
  <path id="spiel_3" d="M650,270 l50,-40 m-3,10 l3,-10 l-10,1" />
  <rect class="info" x="650" y="310" rx="10" ry="10" width="70" height="70" />
  <text x="685" y="367">3</text>
