--- a/system6/blockinfo/block.html
+++ b/system6/blockinfo/block.html
@@ -67,10 +67,10 @@ div.idee {
 </head>
 <body>
   <div id="header"><div class="left">
-  <a href="/uld/grundlagen3/#block"><img src="/image/bhv1.gif"/></a>
+  <a href="/system6/#block"><img src="/image/bhv1.gif"/></a>
   <div>Der Block</div>
   </div><div class="right">
-  <a href="/uld/grundlagen3/#block"><img src="/image/bhv1.gif"/></a>
+  <a href="/system6/#block"><img src="/image/bhv1.gif"/></a>
   </div>
   </div>
 
