--- a/system6/index.html
+++ b/system6/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
   <div id="header"><div class="left">
-<a href="/ov.html#grundlagen_br3"><img src="/image/bhv1.gif"/></a>
+<a href="/ov.html#system6"><img src="/image/bhv1.gif"/></a>
 <div>Grundlagen</div>
 </div><div class="right">
-<a href="/ov.html#grundlagen_br3"><img src="/image/bhv1.gif"/></a>
+<a href="/ov.html#system6"><img src="/image/bhv1.gif"/></a>
 </div>
 </div>
   <div id="content_container"><h1 class="tactics">Annahme</h1>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
-    <td><a id="3er_riegel" href="/uld/grundlagen3/annahme/zudritt.html"><h3>3er Riegel</h3></a></td>
+    <td><a id="3er_riegel" href="/system6/annahme/zudritt.html"><h3>3er Riegel</h3></a></td>
 
   </tr>
   <tr>
-    <td><a href="/uld/grundlagen3/annahme/zudritt.html"><img src="/uld/grundlagen3/annahme/zudritt.png" alt="3er Riegel"></a></td>
+    <td><a href="/system6/annahme/zudritt.html"><img src="/system6/annahme/zudritt.png" alt="3er Riegel"></a></td>
 
   </tr>
 </table>
@@ -29,37 +29,37 @@
 <h1 class="tactics">Aufspiel + Angriff</h1>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
-    <td><a id="wann_1" href="/uld/grundlagen3/aufspiel/wann_1.html"><h3>Wann 1</h3></a></td>
-<td><a id="wann_2" href="/uld/grundlagen3/aufspiel/wann_2.html"><h3>Wann 2</h3></a></td>
-<td><a id="wo" href="/uld/grundlagen3/aufspiel/wo.html"><h3>Wo</h3></a></td>
+    <td><a id="wann_1" href="/system6/aufspiel/wann_1.html"><h3>Wann 1</h3></a></td>
+<td><a id="wann_2" href="/system6/aufspiel/wann_2.html"><h3>Wann 2</h3></a></td>
+<td><a id="wo" href="/system6/aufspiel/wo.html"><h3>Wo</h3></a></td>
 
   </tr>
   <tr>
-    <td><a href="/uld/grundlagen3/aufspiel/wann_1.html"><img src="/uld/grundlagen3/aufspiel/wann1.png" alt="Wann 1"></a></td>
-<td><a href="/uld/grundlagen3/aufspiel/wann_2.html"><img src="/uld/grundlagen3/aufspiel/wann2.png" alt="Wann 2"></a></td>
-<td><a href="/uld/grundlagen3/aufspiel/wo.html"><img src="/uld/grundlagen3/aufspiel/wo.png" alt="Wo"></a></td>
-
-  </tr>
-</table>
-<table class="tactics" align="center" cellspacing="0" cellpadding="10">
-  <tr>
-    <td><a id="vorbereitung_2" href="/uld/grundlagen3/aufspiel/vorbereitung_2.html"><h3>Vorbereitung 2</h3></a></td>
-<td><a id="vorbereitung_1" href="/uld/grundlagen3/aufspiel/vorbereitung_1.html"><h3>Vorbereitung 1</h3></a></td>
-
-  </tr>
-  <tr>
-    <td><a href="/uld/grundlagen3/aufspiel/vorbereitung_2.html"><img src="/uld/grundlagen3/aufspiel/vorbereitung2.png" alt="Vorbereitung 2"></a></td>
-<td><a href="/uld/grundlagen3/aufspiel/vorbereitung_1.html"><img src="/uld/grundlagen3/aufspiel/vorbereitung1.png" alt="Vorbereitung 1"></a></td>
+    <td><a href="/system6/aufspiel/wann_1.html"><img src="/system6/aufspiel/wann1.png" alt="Wann 1"></a></td>
+<td><a href="/system6/aufspiel/wann_2.html"><img src="/system6/aufspiel/wann2.png" alt="Wann 2"></a></td>
+<td><a href="/system6/aufspiel/wo.html"><img src="/system6/aufspiel/wo.png" alt="Wo"></a></td>
 
   </tr>
 </table>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
-    <td><a id="aufspiel" href="/uld/grundlagen3/aufspiel/"><h3>Die Codes</h3></a></td>
+    <td><a id="vorbereitung_2" href="/system6/aufspiel/vorbereitung_2.html"><h3>Vorbereitung 2</h3></a></td>
+<td><a id="vorbereitung_1" href="/system6/aufspiel/vorbereitung_1.html"><h3>Vorbereitung 1</h3></a></td>
 
   </tr>
   <tr>
-    <td><a href="/uld/grundlagen3/aufspiel/"><img src="aufspiel/plan.png" alt="Die Codes"></a></td>
+    <td><a href="/system6/aufspiel/vorbereitung_2.html"><img src="/system6/aufspiel/vorbereitung2.png" alt="Vorbereitung 2"></a></td>
+<td><a href="/system6/aufspiel/vorbereitung_1.html"><img src="/system6/aufspiel/vorbereitung1.png" alt="Vorbereitung 1"></a></td>
+
+  </tr>
+</table>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="aufspiel" href="/system6/aufspiel/"><h3>Die Codes</h3></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/system6/aufspiel/"><img src="aufspiel/plan.png" alt="Die Codes"></a></td>
 
   </tr>
 </table>
@@ -167,6 +167,25 @@
   <tr>
     <td><a href="verteidigung/ohne_1.html"><div>"Ohne" Block<br>(Aufspielerin hinten)</div></a></td>
 <td><a href="verteidigung/ohne_2.html"><div>"Ohne" Block<br>(Aufspielerin vorne)</div></a></td>
+
+  </tr>
+</table>
+
+<h1 class="tactics">Spielfeld</h1>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="spielfeld" href="/imageview.html?i=system6%2Fspielfeld%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fsystem6%23spielfeld"><h3>Spielfeld</h3></a></td>
+<td><a id="positionen" href="/imageview.html?i=system6%2Fspielfeld%2Fpositionen.png&t=Positionen&x=Die%20Positionen%20der%20Spielerinnen.&b=%2Fsystem6%23positionen"><h3>Positionen</h3></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=system6%2Fspielfeld%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fsystem6%23spielfeld"><img src="spielfeld/spielfeld.png" alt="Spielfeld"></a></td>
+<td><a href="/imageview.html?i=system6%2Fspielfeld%2Fpositionen.png&t=Positionen&x=Die%20Positionen%20der%20Spielerinnen.&b=%2Fsystem6%23positionen"><img src="spielfeld/positionen.png" alt="Positionen"></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=system6%2Fspielfeld%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fsystem6%23spielfeld"><div>Das Spielfeld.</div></a></td>
+<td><a href="/imageview.html?i=system6%2Fspielfeld%2Fpositionen.png&t=Positionen&x=Die%20Positionen%20der%20Spielerinnen.&b=%2Fsystem6%23positionen"><div>Die Positionen der Spielerinnen.</div></a></td>
 
   </tr>
 </table>
