--- a/system6/verteidigung/block_2.html
+++ b/system6/verteidigung/block_2.html
@@ -214,10 +214,10 @@ function menuHandler(fullkey, state) {
 <body onload="init();">
 <div class="container">
 <div id="header"><div class="left">
-<a href="/uld/grundlagen3/#block_2"><img src="/image/bhv1.gif"/></a>
+<a href="/system6/#block_2"><img src="/image/bhv1.gif"/></a>
 <div>{{title}}</div>
 </div><div class="right">
-<a href="/uld/grundlagen3/#block_2"><img src="/image/bhv1.gif"/></a>
+<a href="/system6/#block_2"><img src="/image/bhv1.gif"/></a>
 </div>
 </div>
 <div id="svgcanvas"><div class="animation_cmds">
