--- a/ov.html
+++ b/ov.html
@@ -34,7 +34,7 @@ function init() {
     'u20_20': ['info20'],
     'u18_20': ['info18'],
     'u16_20': ['info16', 'schedule_u16_20', 'system6'],
-    'u15_20': ['info15', 'schedule_u15_20'],
+    'u15_20': ['info15', 'schedule_u15_20', 'system4'],
     'u14_20': ['info14', 'schedule_u14_20'],
     'u13_20': ['info13', 'schedule_u13_20'],
     'u12_20': ['info12', 'schedule_u12_20'],
@@ -118,6 +118,7 @@ function init() {
     <div id="u15_20_2" class="expanded_container">
       <a id="info15" href="/info/u15.html"><h3>Infos</h3></a>
       <a id="schedule_u15_20" href="schedule.html?key=u15_20"><h3>Turniere</h3></a>
+      <a id="system4" href="/system4"><h3>Spielsystem</h3></a>
     </div>
 
     <h2 id="u16_20" class="expandable">U16 - Schülerinnen</h2>
