system4, scrollable table container

--- a/system6/index.html
+++ b/system6/index.html
@@ -15,6 +15,7 @@
 </div>
 </div>
   <div id="content_container"><h1 class="tactics">Annahme</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="3er_riegel" href="/system6/annahme/zudritt.html"><h3>3er Riegel</h3></a></td>
@@ -25,8 +26,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Aufspiel + Angriff</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="wann_1" href="/system6/aufspiel/wann_1.html"><h3>Wann 1</h3></a></td>
@@ -41,6 +44,8 @@
 
   </tr>
 </table>
+</div>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="vorbereitung_2" href="/system6/aufspiel/vorbereitung_2.html"><h3>Vorbereitung 2</h3></a></td>
@@ -53,6 +58,8 @@
 
   </tr>
 </table>
+</div>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="aufspiel" href="/system6/aufspiel/"><h3>Die Codes</h3></a></td>
@@ -63,8 +70,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Angriff + Sicherung</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="angriff_06" href="aufspiel/angriff_06.html"><h3>Angriff 0/6</h3></a></td>
@@ -79,8 +88,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Basis</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="basis_1" href="verteidigung/basis_1.html"><h3>Basis 1</h3></a></td>
@@ -101,8 +112,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Block + Feldverteidigung</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="block" href="blockinfo/block.html"><h3>Infos zum Block</h3></a></td>
@@ -113,6 +126,8 @@
 
   </tr>
 </table>
+</div>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="block_4" href="verteidigung/block_4.html"><h3>Doppelblock 4</h3></a></td>
@@ -133,6 +148,8 @@
 
   </tr>
 </table>
+</div>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="block_3" href="verteidigung/block_3.html"><h3>Block 3</h3></a></td>
@@ -153,6 +170,8 @@
 
   </tr>
 </table>
+</div>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="ohne_1" href="verteidigung/ohne_1.html"><h3>Ohne (1)</h3></a></td>
@@ -170,8 +189,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Spielfeld</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="spielfeld" href="/imageview.html?i=system6%2Fspielfeld%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fsystem6%23spielfeld"><h3>Spielfeld</h3></a></td>
@@ -189,6 +210,7 @@
 
   </tr>
 </table>
+</div>
 
 </div>
   <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
