--- a/system6/spielfeld/index.html
+++ b/system6/spielfeld/index.html
@@ -15,6 +15,7 @@
 </div>
 </div>
   <div id="content_container"><h1 class="tactics">Spielfeld</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="spielfeld" href="/imageview.html?i=system6%2Fspielfeld%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fsystem6%2Fspielfeld%23spielfeld"><h3>Spielfeld</h3></a></td>
@@ -32,6 +33,7 @@
 
   </tr>
 </table>
+</div>
 
 </div>
   <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
