--- a/u11/index.html
+++ b/u11/index.html
@@ -15,6 +15,7 @@
 </div>
 </div>
   <div id="content_container"><h1 class="tactics">Annahme und Verteidigung</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="2x_spielen" href="2x_spielen.html"><h3>2x Spielen</h3></a></td>
@@ -29,6 +30,8 @@
 
   </tr>
 </table>
+</div>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="aussenfuss" href="aussenfuss.html"><h3>Außenfuß</h3></a></td>
@@ -46,6 +49,8 @@
 
   </tr>
 </table>
+</div>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="3x_spielen" href="3x_spielen.html"><h3>3x Spielen</h3></a></td>
@@ -66,8 +71,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Angriff</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="tomjerry" href="/imageview.html?i=u11%2Ftomjerry.png&t=Tom%20%2B%20Jerry&x=Kurze%20Angriffe%20vor%20die%20F%C3%BC%C3%9Fe%20der%20Gegnerin.&b=%2Fu11%23tomjerry"><h3>Tom + Jerry</h3></a></td>
@@ -85,6 +92,7 @@
 
   </tr>
 </table>
+</div>
 
 </div>
   <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
