--- a/u12/index.html
+++ b/u12/index.html
@@ -15,6 +15,7 @@
 </div>
 </div>
   <div id="content_container"><h1 class="tactics">Annahme</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="2er_riegel" href="/imageview.html?i=u12%2F2er_riegel.png&t=2er%20Riegel&x=Die%20Annahme%20des%20gegnerischen%20Service.&b=%2Fu12%232er_riegel"><h3>2er Riegel</h3></a></td>
@@ -29,8 +30,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Aufspiel + Angriffsvorbereitung</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="aufspiel" href="/imageview.html?i=u12%2Faufspiel.png&t=Aufspiel&x=Das%20Aufspiel%20und%20die%20Vorbereitung%20auf%20den%20eigenen%20Angriff.&b=%2Fu12%23aufspiel"><h3>Aufspiel</h3></a></td>
@@ -45,8 +48,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Angriff + Sicherung</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="angriff4" href="/imageview.html?i=u12%2Fangriff4.png&t=Links%3A%20Position%204&x=Der%20Angriff%20%C3%BCber%20die%20Position%204%20mit%20Sicherung.&b=%2Fu12%23angriff4"><h3>Links: Position 4</h3></a></td>
@@ -64,8 +69,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Basis</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="basis" href="/imageview.html?i=u12%2Fbasis.png&t=Basis&x=Wir%20gehen%20in%20die%20Basis%2C%20sobald%20der%20Ball%20beim%20Gegner%20ist.&b=%2Fu12%23basis"><h3>Basis</h3></a></td>
@@ -80,8 +87,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Verteidigung (mit Block)</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="block4" href="/imageview.html?i=u12%2Fblock4.png&t=Links%3A%20Position%204&x=Der%20Block%20auf%20der%20Position%204%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block4"><h3>Links: Position 4</h3></a></td>
@@ -102,8 +111,10 @@
 
   </tr>
 </table>
+</div>
 
 <h1 class="tactics">Verteidigung (ohne Block)</h1>
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="ohne4" href="/imageview.html?i=u12%2Fohne4.png&t=Links%3A%20Position%204&x=Geschenkter%20Ball%20bei%20Position%204.&b=%2Fu12%23ohne4"><h3>Links: Position 4</h3></a></td>
@@ -124,6 +135,7 @@
 
   </tr>
 </table>
+</div>
 
 </div>
   <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
